# xai-project-5

./: .env.example  .gitignore  LICENSE  LLM_JUDGE_GUIDE.md  Makefile  README.md  llm_judge_analysis_report.md  pyproject.toml  requirements.txt
.github/agents/: sae-pipeline.agent.md
.github/instructions/: python.instructions.md
.github/prompts/: run-tests.prompt.md
data/: test_image_ids.json  vocabulary.json
data/mock/: test_embeddings.pt  text_vocab_embeddings.pt  train_embeddings.pt  visual_embeddings.pt
datasets/: __init__.py  iu_xray.py
docs/: CONCEPT-ORGANIZATION-REPORT.md  FINDINGS.md  LLM-JUDGE-COMPLETE-GUIDE.md  README.md  REFACTOR-PLAN.md  SPLiCE-JUDGE-EVALUATION-GUIDE.md  implementation.md  sae_small_dataset_mitigation.md
docs/archive/: README.md
docs/audits/: ML-AUDIT-2026-06-01.md  ML-AUDIT-2026-06-14.md  ML-AUDIT-2026-06-23.md  ML-AUDIT-2026-06-24.md  ML-AUDIT-2026-06-25.md  ML-AUDIT-2026-06-26.md  ML-AUDIT-2026-06-27.md  (+3 more)
results/: .judge_checkpoint.json  REPORT_run.md  aligned_scores.csv  concept_names.json  judge_checkpoint_llama3.1.json  sample_explanations.json
scripts/: 00_build_vocab.py  01_extract_embeddings.py  02_baseline.py  03_hidden.py  04_spliece.py  05_concept_organization.py  06_generate_null.py  07_judge.py  08_baseline_ablation.py  09_hidden_ablation.py  10_baseline.py  11_hidden.py  20_spliece.py  30_concept_organization.py  40_generate_null.py  41_judge.py  90_run_all.sh  generate_null_explanations.py  relabeling_control.py  run_baseline.py  run_baseline_ablation.py  run_concept_organization.py  run_consensus.py  run_extraction.py  run_failure_case_analysis.py  run_faithfulness.py  run_path_a.py  run_path_a_ablation.py  run_sae_training.py  run_spliece.py  run_vocab_building_pipeline.py  verify_byte_identical.py
src/: 02a_train_sae.py  02b_concept_naming.py  02c_generate_explanations.py  02d_stability_analysis.py  05_evaluate_llm_judge.py  build_vocabulary.py  config.py  evaluate_llm_judge.py  extract_embeddings.py  sae_module.py  test.py  utils.py
tests/: conftest.py  test_build_vocabulary.py  test_concept_naming.py  test_extract_embeddings.py  test_generate_explanations.py  test_integration.py  test_llm_judge.py  test_load_vlm.py  test_sae_module.py  test_stability.py
xai_datasets/: __init__.py  augmentation.py  download_iu_xray.py  download_mesh.py  download_padchest.py  download_rocov2.py  iu_xray.py  padchest.py  rocov2.py  spec.py
(+316 files in other folders)
